--- a/Extract Tables.ipynb
+++ b/Extract Tables.ipynb
@@ -124,7 +124,7 @@
     "    try:\n",
     "        table_df = spark.read.jdbc(url=url, table=table, properties=properties)\n",
     "        table_df = table_df.repartition(1)\n",
-    "        delta_path = f\"/mnt/join/delta/{table}\"  \n",
+    "        delta_path = f\"/mnt/case/delta/{table}\"  \n",
     "        table_df.write.format(\"delta\").mode(\"overwrite\").save(delta_path)\n",
     "        spark.sql(f\"CREATE TABLE IF NOT EXISTS {table} USING DELTA LOCATION '{delta_path}'\")\n",
     "        print(f\"Tabela {table} exportada para Delta Lake em {delta_path}\")\n",
