--- a/respostas-questoes04-e-05.ipynb
+++ b/respostas-questoes04-e-05.ipynb
@@ -72,8 +72,8 @@
    "source": [
     "\n",
     "df_itens_cancelados = orders_df.filter(orders_df.status == \"Cancelled\") \\\n",
-    "    .join(orderdetails_df, \"order_number\") \\\n",
-    "    .join(customers_df, \"customer_number\") \\\n",
+    "    .case(orderdetails_df, \"order_number\") \\\n",
+    "    .case(customers_df, \"customer_number\") \\\n",
     "    .groupBy(\"country\") \\\n",
     "    .count() \\\n",
     "    .withColumnRenamed(\"count\", \"qnt_itens_cancelados\") \\\n",
@@ -82,7 +82,7 @@
     "\n",
     "df_itens_cancelados.show()\n",
     "\n",
-    "df_itens_cancelados.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/join/delta/itens_cancelados\")"
+    "df_itens_cancelados.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/case/delta/itens_cancelados\")"
    ]
   },
   {
@@ -114,9 +114,9 @@
     "df_order_shipped = orders_df.filter((orders_df.status == \"Shipped\") & (f.year(orders_df.order_date) == 2005))\n",
     "\n",
     "df_faturamento_lp_shipped = df_order_shipped \\\n",
-    "    .join(orderdetails_df, \"order_number\") \\\n",
-    "    .join(products_df, \"product_code\") \\\n",
-    "    .join(product_lines_df, \"product_line\") \\\n",
+    "    .case(orderdetails_df, \"order_number\") \\\n",
+    "    .case(products_df, \"product_code\") \\\n",
+    "    .case(product_lines_df, \"product_line\") \\\n",
     "    .groupBy(\"product_line\") \\\n",
     "    .agg(f.sum(f.col(\"quantity_ordered\") * f.col(\"price_each\")).alias(\"faturamento\")) \\\n",
     "    .orderBy(f.col(\"faturamento\").desc()) \\\n",
@@ -124,7 +124,7 @@
     "\n",
     "df_faturamento_lp_shipped.show()\n",
     "\n",
-    "df_faturamento_lp_shipped.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/join/delta/faturamento_lp_shipped\")"
+    "df_faturamento_lp_shipped.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/case/delta/faturamento_lp_shipped\")"
    ]
   },
   {
@@ -154,7 +154,7 @@
    ],
    "source": [
     "df_vendedores_japao = employees_df \\\n",
-    "    .join(offices_df, \"office_code\") \\\n",
+    "    .case(offices_df, \"office_code\") \\\n",
     "    .filter(offices_df.country == \"Japan\") \\\n",
     "    .select(\n",
     "        \"first_name\", \n",
@@ -164,7 +164,7 @@
     "\n",
     "df_vendedores_japao.show()\n",
     "\n",
-    "df_vendedores_japao.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/join/delta/vendedores_japao\")\n"
+    "df_vendedores_japao.write.format(\"delta\").mode(\"overwrite\").save(\"/mnt/case/delta/vendedores_japao\")\n"
    ]
   }
  ],
